Annotate functional interfaces